# monkey

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
examples/: add.monkey
include/monkey/: common.hh
include/monkey/lexer/: lexer.hh  token.hh
include/monkey/parser/: ast.hh  expression.hh  parser.hh  statement.hh
include/monkey/repl/: repl.hh
src/: _ast.rs  _parser.rs  _program.rs  ast.rs  environment.rs  evaluator.rs  expression.rs  go.mod  lexer.rs  lib.rs  main.cc  main.go  main.rs  object.rs  parser.rs  precedence.rs  program.rs  statement.rs  token.rs
src/ast/: expression.rs  mod.rs  parser.rs  program.rs  statement.rs
src/expression/: boolean.rs  call.rs  function_literal.rs  grouped.rs  identifier.rs  if.rs  infix.rs  integer_literal.rs  mod.rs  prefix.rs
src/lexer/: lexer.cc  lexer.go  lexer_test.go  mod.rs  token.cc  token.rs
src/object/: boolean.rs  error.rs  function.rs  integer.rs  mod.rs  null.rs  return.rs
src/parser/: ast.cc  expression.cc  parser.cc  statement.cc
src/repl/: repl.cc  repl.go
src/statement/: block.rs  expression.rs  let.rs  mod.rs  return.rs
src/token/: token.go
tests/: CMakeLists.txt  test_lexer.cc  test_parser.cc
